# LingChat

./: .env.example  .gitignore  README-help.md  README.md  context7.json  environment.yml  example.py  main.py  pyproject.toml  start.bat  update_core.py  update_main.py  version
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/workflows/: build-frontend.yml  test-with-conda.yml  test-with-uv.yml
Demo/LingChat-Pal/: package.json  pnpm-lock.yaml  vite.config.ts
Demo/LingChat-Pal/src/: main.ts
Demo/LingChat-Pal/src-tauri/: tauri.conf.json
Demo/editor/: 123.md  project_summary.md  创作.md  提问工具.py
Demo/editor/backend/: main.py
Demo/editor/frontend/: index.html
Demo/editor/others/: package-lock.json
Demo/story_pack/story/: 战斗.yaml  故事开场.yaml  白天.yaml  被关进地下室.yaml  被抓.yaml  逃跑.yaml
Demo/todo/: todo.py
Demo/update_example/: CALLS.md
docs/: index.md  前后端通讯api.md
docs/develop/: Style-Bert-VITS2模型训练教程.md  character_guide.md  dev_guide.md  dev_process.md  index.md  project_structure.md  story_guide.md  todo.md  windows_dev.md
docs/faq/: clone.md  index.md  support.md
docs/faq/tech/: android.md  error.md
docs/faq/ui/: index.md
docs/manual/: index.md
docs/manual/deployment/: android.md  android_old.md  linux.md  linux_old.md  win.md  win_old.md
docs/manual/expand/: ling_pet.md  rag.md  vision.md  voice.md
frontend_vue/: README.md  package.json  pnpm-lock.yaml  start.bat  tsconfig.json  vite.config.ts
frontend_vue/src/: App.vue  main.ts
frontend_vue/src/api/: http.ts
frontend_vue/src/components/: CursorEffects.vue
frontend_vue/src/plugins/: logForwarder.ts
frontend_vue/src/router/: index.ts
frontend_vue/src/stores/: index.ts  types.ts
frontend_vue/src/types/: api.ts  chat.ts  index.ts  script.ts  ui.ts  websocket.ts
ling_chat/: main.py
ling_chat/api/: app_server.py  chat_achievement.py  chat_audio.py  chat_background.py  chat_character.py  chat_clothes.py  chat_history.py  chat_info.py  chat_music.py  chat_script.py  chat_sound.py  console_logs.py  env_config.py  frontend_routes.py  new_chat_main.py  routes_manager.py  update_api.py
ling_chat/character_plus/: downloader.py  scandb.py
ling_chat/core/: achievement_manager.py  achievement_triggers.py  console_log_service.py  logger.py  memory.py  pic_analyzer.py  service_manager.py  webview.py
ling_chat/core/TTS/: __init__.py  aivis_adapter.py  base_adapter.py  bv2_adapter.py  gsv_adapter.py  index_adpater.py  sbv2_adapter.py  sbv2api_adapter.py  tts_provider.py  vits_adapter.py
ling_chat/core/ai_service/: ai_logger.py  config.py  (+10 more)
ling_chat/database/: character_model.py  conversation_model.py  database.py  user_model.py
ling_chat/game_database/: __init__.py  database.py  design.md  models.py  test_migration.py
ling_chat/update/: update_core.py  update_main.py
ling_chat/utils/: cli_parser.py  function.py  load_env.py  runtime_config.py  runtime_path.py  voice_check.py
others/document/: Linux_user.md  Linux部署教程.md
tests/: test_smoke.py
(+206 files in other folders)
