[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ling-chat"
version = "0.3.1-beta1"
description = ""
authors = [
    { name = "0x00-pl", email = "0x00.pl@gmail.com" },
]
requires-python = ">=3.13"  # ⭐ 添加这行，解决警告

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "requests>=2.32.4",
    "aiohttp==3.12.11",
    "pywebview>=5.4",
    "openai>=1.85.0",
    "platformdirs>=4.3.8",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    "mss>=10.0.0",
    "google-generativeai>=0.8.5",
    "py7zr>=1.0.0",
    "chromadb>=1.0.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

# 保留给其他工具（如 poetry/pdm）的兼容配置
[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
]

[tool.setuptools]
packages = ["ling_chat"]

# ⭐⭐ 修改这里的 uv 配置 ⭐⭐
[tool.uv]
index-strategy = "unsafe-best-match"

# ⭐ 关键修复：使用正确的 uv 语法
[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = 1

[tool.uv.sources]
default = { index = "tuna" }

[tool.uv.pip]
resolution = "highest"
generate-hashes = true