[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ling-chat"
version = "0.3.1-beta1"
description = ""
authors = [
    { name = "0x00-pl", email = "0x00.pl@gmail.com" },
]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.0",
    "pywebview>=5.4",
    "openai>=1.85.0",
    "platformdirs>=4.3.8",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    "mss>=10.0.0",
    "py7zr>=1.0.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "sqlmodel>=0.0.31",
    "pyyaml>=6.0.2",
]

# 保留给其他工具（如 poetry/pdm）的兼容配置
[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
]

[tool.setuptools]
packages = ["ling_chat"]

[tool.uv]
index-strategy = "unsafe-best-match"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = 1

[tool.uv.sources]
default = { index = "tuna" }

[tool.uv.pip]
resolution = "highest"
generate-hashes = true

[tool.ruff]
# 设置最大行长度
line-length = 88
# 目标Python版本与项目保持一致
target-version = "py313"
# 指定要检查的源代码目录
src = ["ling_chat", "tests"]

[tool.ruff.lint]
# 启用pycodestyle errors (E), warnings (W), pyflakes (F), isort (I), flake8-comprehensions (C), flake8-bugbear (B)
select = ["E", "W", "F", "I", "C", "B"]
# 忽略行长度过长的错误，由格式化工具处理
ignore = ["E501", "C901"]

# 为__init__.py文件忽略未使用的导入（F401）
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
